--- a/build.xml
+++ b/build.xml
@@ -30,6 +30,7 @@
   <!-- Source code locations -->
   <property name="src.dir"           value="src/main/java"/>
   <property name="src.test.dir"      value="src/test/java"/>
+  <property name="src.resources.dir" value="src/main/resources"/>
   <property name="src.examples.dir"  value="src-examples"/>
   <property name="bldsrc.dir"        value="bldsrc"/>
   <property name="classes.dir"       value="bldbin"/>
@@ -65,13 +66,13 @@
 
   <!-- keyword substitutions -->
   <filterset id="filters.shared">
-    <filter token="Name"             value="${Name}" />
-    <filter token="website"          value="${web.site}" />
-    <filter token="version-major"    value="${version-major}" />
-    <filter token="version-minor"    value="${version-minor}" />
-    <filter token="version-revision" value="${version-revision}" />
-    <filter token="version-status"   value="${version-status}" />
-    <filter token="version"          value="${version}" />
+    <filter token="NAME"             value="${Name}" />
+    <filter token="WEBSITE"          value="${web.site}" />
+    <filter token="VERSION-MAJOR"    value="${version-major}" />
+    <filter token="VERSION-MINOR"    value="${version-minor}" />
+    <filter token="VERSION-REVISION" value="${version-revision}" />
+    <filter token="VERSION-STATUS"   value="${version-status}" />
+    <filter token="VERSION"          value="${version}" />
   </filterset>
 
   <!-- Primary externally visible targets -->
@@ -125,14 +126,15 @@
     <delete dir="${bldsrc.dir}"/>
     <mkdir  dir="${bldsrc.dir}"/>
     <tstamp>
-      <format property="BUILD_TIME" pattern="yyyy-MM-dd'T'HH:mm:ss.S"/>
+      <format property="BUILD_TIME_XSD" pattern="yyyy-MM-dd'T'HH:mm:ss.S"/>
     </tstamp>
     <copy todir="${bldsrc.dir}" >
       <fileset dir="${src.dir}" excludes="**/CVS"/>
       <fileset dir="${src.test.dir}" excludes="**/CVS"/>
+      <fileset dir="${src.resources.dir}" excludes="**/CVS"/>
       <filterset>
         <filterset refid="filters.shared" />
-        <filter token="build-time" value="${BUILD_TIME}" />
+        <filter token="BUILD_TIME_XSD" value="${BUILD_TIME_XSD}" />
       </filterset>
     </copy>
   </target>
@@ -165,7 +167,8 @@
       <compilerarg value="-Xlint:deprecation"/>
       <compilerarg value="-Xlint:unchecked"/>
     </javac>
-    <copy todir="${classes.dir}" file="${bldsrc.dir}/log4j.properties"/>
+    <copy todir="${classes.dir}" file="${bldsrc.dir}/log4j.properties" />
+    <copy todir="${classes.dir}" file="${bldsrc.dir}/jena-properties.xml"/>
   </target>
 
   <target name="make-jar" depends="compile-jena,copy-aux-files"
