jena-properties.xml file now goes in the same place as some of the Jena code, as suggested by Andy. This way it can’t be overridden.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113852 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -168,7 +168,7 @@
       <compilerarg value="-Xlint:unchecked"/>
     </javac>
     <copy todir="${classes.dir}" file="${bldsrc.dir}/log4j.properties" />
-    <copy todir="${classes.dir}" file="${bldsrc.dir}/jena-properties.xml"/>
+    <copy todir="${classes.dir}/com/hp/hpl/jena/" file="${bldsrc.dir}/jena-properties.xml"/>
   </target>
 
   <target name="make-jar" depends="compile-jena,copy-aux-files"
