git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1121663 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -250,17 +250,16 @@ build.time.txt=${build.time.txt}
   <distributionManagement>
     <downloadUrl>http://jena.hpl.hp.com/repo-dev</downloadUrl>
     <repository>
-      <id>jena-repo-dev</id>
-      <name>Jena development repo</name>
+      <id>jena-repo</id>
+      <name>Jena repo</name>
       <!-- scp does not work (TERM not set !!) -->
-      <!-- <url>sftp://jena.hpl.hp.com/var/repo-dev</url> -->
+      <!-- <url>sftp://jena.hpl.hp.com/var/repo</url> -->
       <url>file:tmp</url>
       <layout>default</layout>
     </repository> 
     <snapshotRepository>
       <id>jena-repo-dev</id>
       <name>Jena development repo</name>
-      <!-- scp does not work (TERM not set !!) -->
       <!-- <url>sftp://jena.hpl.hp.com/var/repo-dev</url> -->
       <url>file:tmp</url>
       <layout>default</layout>
