--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.5</version>
+      <!-- <scope>test</scope> -->
     </dependency>
 
      <dependency>
@@ -100,6 +101,11 @@
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>src-test</testSourceDirectory>
     
+    <!-- Written by antrun -->
+    <filters>
+      <filter>${basedir}/target/filter.properties</filter>
+    </filters>
+
     <resources>
       <resource>
 	<targetPath>com/hp/hpl/jena/sparql/</targetPath>
@@ -107,9 +113,14 @@
 	<directory>resources</directory>
       </resource>
     </resources>
-    <filters>
-      <filter>${basedir}/target/filter.properties</filter>
-    </filters>
+
+    <testResources>
+      <testResource>
+        <filtering>false</filtering>
+        <directory>testing</directory>
+        <targetPath>testing</targetPath>
+      </testResource>
+    </testResources>
     
     <plugins>
       <plugin>
@@ -123,26 +134,27 @@
 
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-source-plugin</artifactId>
-	<executions> 
-	  <execution>
-	    <id>attach-sources</id>
-	    <phase>verify</phase>
-	    <goals>
-	      <goal>jar</goal>
-	    </goals>
-	  </execution>
-	</executions>
-      </plugin>
-
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-surefire-plugin</artifactId>
 	<configuration>
 	  <includes>
 	    <include>com/hp/hpl/jena/sparql/test/ARQTestSuite.java</include>
 	  </includes>
 	</configuration>
+      </plugin>
+
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-source-plugin</artifactId>
+	<executions> 
+	  <execution>
+	    <id>attach-sources</id>
+	    <!-- <phase>package</phase> -->
+	    <phase>verify</phase>
+	    <goals>
+	      <goal>jar</goal>
+	    </goals>
+	  </execution>
+	</executions>
       </plugin>
 
       <plugin>
@@ -167,7 +179,7 @@
 	  <!-- Exclude the implementation -->
 	  <excludePackageNames>com.hp.hpl.jena.sparql.*</excludePackageNames>
 	  <bottom>Copyright &#169; 2004, 2005, 2006, 2007, 2008, 2009 Hewlett-Packard Development Company, LP</bottom>
-	</configuration>  
+	</configuration>
       </plugin>
 
       <plugin>
@@ -182,7 +194,8 @@
 	<executions>
 	  <execution>
 	    <id>create-assembly</id>
-	    <phase>package</phase>
+	    <!-- Better after package because of javadoc and source -->
+	    <phase>install</phase>
 	    <goals>
 	      <goal>attached</goal>
 	    </goals>
@@ -223,6 +236,21 @@ build.time.txt=${build.time.txt}
             </configuration>
             <goals>
               <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- see: http://maven.apache.org/guides/mini/guide-attached-tests.html -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.2</version>
+        <executions>
+          <execution>
+	    <phase>verify</phase>
+            <goals>
+              <goal>test-jar</goal>
             </goals>
           </execution>
         </executions>
