--- a/pom.xml
+++ b/pom.xml
@@ -148,8 +148,6 @@
 	<executions> 
 	  <execution>
 	    <id>attach-sources</id>
-	    <!-- <phase>package</phase> -->
-	    <phase>verify</phase>
 	    <goals>
 	      <goal>jar</goal>
 	    </goals>
@@ -182,6 +180,21 @@
 	</configuration>
       </plugin>
 
+      <!-- see: http://maven.apache.org/guides/mini/guide-attached-tests.html -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.2</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+ 
+
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-assembly-plugin</artifactId>
@@ -190,14 +203,13 @@
 	    <descriptor>assembly.xml</descriptor>
 	  </descriptors>
         </configuration>
-	<!-- Add to packaging lifecycle phase -->
 	<executions>
 	  <execution>
 	    <id>create-assembly</id>
-	    <!-- Better after package because of javadoc and source -->
+	    <!-- Better after package because of javadoc, source and test-jar-->
 	    <phase>install</phase>
 	    <goals>
-	      <goal>attached</goal>
+	      <goal>single</goal>
 	    </goals>
 	  </execution>
 	</executions>
@@ -216,7 +228,7 @@
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
           <execution>
-	    <id>ant-generate-resources</id>
+	    <id>ant-timestamp</id>
             <phase>generate-resources</phase>
             <configuration>
 	      <tasks>
@@ -229,7 +241,7 @@
 #begin
 build.time.xsd=${build.time.xsd}
 build.time.txt=${build.time.txt}
-#end 
+#end
 		</echo>
 		<echo message="build.time=${build.time.txt}"/>
 	      </tasks>
@@ -238,24 +250,10 @@ build.time.txt=${build.time.txt}
               <goal>run</goal>
             </goals>
           </execution>
+	  <!-- Another task, another execution -->
         </executions>
       </plugin>
 
-      <!-- see: http://maven.apache.org/guides/mini/guide-attached-tests.html -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.2</version>
-        <executions>
-          <execution>
-	    <phase>verify</phase>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
- 
     </plugins>
 
   </build>
