git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1121676 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,8 @@
 
     <!-- Choose your logging provider 
 	 But note ARQ confgures log4j (and java.util.logging)
-	 in its logging support utilities.
+	 in its logging support utilities so needs it to 
+	 compile.
     -->
     
     <dependency>
@@ -101,7 +102,7 @@
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>src-test</testSourceDirectory>
     
-    <!-- Written by antrun -->
+    <!-- The filter file is written by antrun -->
     <filters>
       <filter>${basedir}/target/filter.properties</filter>
     </filters>
