Run assembly on phase "verify" - after sources, javadoc and test-jar done.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113869 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -205,7 +205,12 @@
         <executions>
           <execution>
             <id>create-assembly</id>
-            <phase>package</phase>
+            <!-- <phase>package</phase> -->
+	        <!-- verify? install? 
+	             Must be after javadoc, sources and test-jar are done.
+	             Before install means it's part of the local repo.
+             -->
+	        <phase>verify</phase>
             <goals>
               <goal>attached</goal>
             </goals>
