--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <project>
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.hp.hpl.jena</groupId>
   <artifactId>arq</artifactId>
@@ -29,7 +30,7 @@
 
   <dependencies>
 
-     <dependency>
+    <dependency>
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>jena</artifactId>
       <version>2.6.0</version>
@@ -60,7 +61,7 @@
       <!-- <scope>test</scope> -->
     </dependency>
 
-     <dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.5.6</version>
@@ -79,9 +80,9 @@
     </dependency>
 
     <!-- Choose your logging provider 
-	 But note ARQ confgures log4j (and java.util.logging)
-	 in its logging support utilities so needs it to 
-	 compile.
+         But note ARQ confgures log4j (and java.util.logging)
+         in its logging support utilities so needs it to 
+         compile.
     -->
     
     <dependency>
@@ -109,9 +110,9 @@
 
     <resources>
       <resource>
-	<targetPath>com/hp/hpl/jena/sparql/</targetPath>
-	<filtering>true</filtering>
-	<directory>resources</directory>
+        <targetPath>com/hp/hpl/jena/sparql/</targetPath>
+        <filtering>true</filtering>
+        <directory>resources</directory>
       </resource>
     </resources>
 
@@ -128,57 +129,57 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-	  <source>1.5</source>
-	  <target>1.5</target>
+          <source>1.5</source>
+          <target>1.5</target>
         </configuration>
       </plugin>
 
       <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-surefire-plugin</artifactId>
-	<configuration>
-	  <includes>
-	    <include>com/hp/hpl/jena/sparql/test/ARQTestSuite.java</include>
-	  </includes>
-	</configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <includes>
+            <include>com/hp/hpl/jena/sparql/test/ARQTestSuite.java</include>
+          </includes>
+        </configuration>
       </plugin>
 
       <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-source-plugin</artifactId>
-	<executions> 
-	  <execution>
-	    <id>attach-sources</id>
-	    <goals>
-	      <goal>jar</goal>
-	    </goals>
-	  </execution>
-	</executions>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions> 
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-javadoc-plugin</artifactId>
-	<executions>
-	  <execution>
-	    <id>attach-javadocs</id>
-	    <goals>
-	      <goal>jar</goal>
-	    </goals>
-	  </execution>
-	</executions>
-	<configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
           <version>true</version>
           <show>public</show>
           <quiet>true</quiet>
           <encoding>UTF-8</encoding>
-	  <windowtitle>${project.name}</windowtitle>
-	  <doctitle>${project.name}</doctitle>
-	  <!-- include com.hp.hpl.jena.query,com.hp.hpl.jena.update,com.hp.hpl.jena.query.larq -->
-	  <!-- Exclude the implementation -->
-	  <excludePackageNames>com.hp.hpl.jena.sparql.*</excludePackageNames>
-	  <bottom>Copyright &#169; 2004, 2005, 2006, 2007, 2008, 2009 Hewlett-Packard Development Company, LP</bottom>
-	</configuration>
+          <windowtitle>${project.name}</windowtitle>
+          <doctitle>${project.name}</doctitle>
+          <!-- include com.hp.hpl.jena.query,com.hp.hpl.jena.update,com.hp.hpl.jena.query.larq -->
+          <!-- Exclude the implementation -->
+          <excludePackageNames>com.hp.hpl.jena.sparql.*</excludePackageNames>
+          <bottom>Copyright &#169; 2004, 2005, 2006, 2007, 2008, 2009 Hewlett-Packard Development Company, LP</bottom>
+        </configuration>
       </plugin>
 
       <!-- see: http://maven.apache.org/guides/mini/guide-attached-tests.html -->
@@ -194,64 +195,63 @@
           </execution>
         </executions>
       </plugin>
- 
 
       <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-assembly-plugin</artifactId>
-	<configuration>
-	  <descriptors>
-	    <descriptor>assembly.xml</descriptor>
-	  </descriptors>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptors>
+            <descriptor>assembly.xml</descriptor>
+          </descriptors>
         </configuration>
-	<executions>
-	  <execution>
-	    <id>create-assembly</id>
-	    <!-- Better after package because of javadoc, source and test-jar-->
-	    <phase>install</phase>
-	    <goals>
-	      <goal>single</goal>
-	    </goals>
-	  </execution>
-	</executions>
+        <executions>
+          <execution>
+            <id>create-assembly</id>
+            <!-- Better after package because of javadoc, source and test-jar-->
+            <phase>verfiy</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-resources-plugin</artifactId>
-	<configuration>
-	  <encoding>UTF-8</encoding>
-	</configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <configuration>
+          <encoding>UTF-8</encoding>
+        </configuration>
       </plugin>
       
       <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
           <execution>
-	    <id>ant-timestamp</id>
+            <id>ant-timestamp</id>
             <phase>generate-resources</phase>
             <configuration>
-	      <tasks>
-		<mkdir dir="${basedir}/target"/>
-		<tstamp>
-		  <format property="build.time.xsd"  pattern="yyyy-MM-dd'T'HH:mm:ssZ"/>
-		  <format property="build.time.txt"  pattern="yyyy-MM-dd HH:mm Z"/>
-		</tstamp>
-		<echo file="${basedir}/target/filter.properties">
-#begin
-build.time.xsd=${build.time.xsd}
-build.time.txt=${build.time.txt}
-#end
-		</echo>
-		<echo message="build.time=${build.time.txt}"/>
-	      </tasks>
+              <tasks>
+                <mkdir dir="${basedir}/target"/>
+                <tstamp>
+                  <format property="build.time.xsd"  pattern="yyyy-MM-dd'T'HH:mm:ssZ"/>
+                  <format property="build.time.txt"  pattern="yyyy-MM-dd HH:mm Z"/>
+                </tstamp>
+                <echo file="${basedir}/target/filter.properties">
+                  #begin
+                  build.time.xsd=${build.time.xsd}
+                  build.time.txt=${build.time.txt}
+                  #end
+                </echo>
+                <echo message="build.time=${build.time.txt}"/>
+              </tasks>
             </configuration>
             <goals>
               <goal>run</goal>
             </goals>
           </execution>
-	  <!-- Another task, another execution -->
+          <!-- Another task, another execution -->
         </executions>
       </plugin>
 
@@ -261,19 +261,18 @@ build.time.txt=${build.time.txt}
 
   <reporting>
     <!-- Does not include the script outputs!
-    <plugins>
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-surefire-report-plugin</artifactId>
-	<configuration>
-           <outputDirectory>${basedir}/target/surefire-reports-html</outputDirectory>
-        </configuration>
-      </plugin>
-    </plugins>
+         <plugins>
+         <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-surefire-report-plugin</artifactId>
+         <configuration>
+         <outputDirectory>${basedir}/target/surefire-reports-html</outputDirectory>
+         </configuration>
+         </plugin>
+         </plugins>
     -->
   </reporting>
-
-      
+  
   <distributionManagement>
     <downloadUrl>http://jena.hpl.hp.com/repo-dev</downloadUrl>
     <repository>
