--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>arq</artifactId>
   <packaging>jar</packaging>
   <name>ARQ</name>
-  <version>2.7.1</version>
+  <version>2.7.1-SNAPSHOT</version>
   <description/>
   <url>http://jena.sf.net/ARQ</url>
 
@@ -116,6 +116,7 @@
       </resource>
     </resources>
 
+    <!--
     <testResources>
       <testResource>
         <filtering>false</filtering>
@@ -123,7 +124,8 @@
         <targetPath>testing</targetPath>
       </testResource>
     </testResources>
-    
+    -->
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -208,9 +210,9 @@
           <execution>
             <id>create-assembly</id>
             <!-- Better after package because of javadoc, source and test-jar-->
-            <phase>verfiy</phase>
+	    <phase>verify</phase>
             <goals>
-              <goal>single</goal>
+	      <goal>single</goal>
             </goals>
           </execution>
         </executions>
