Add tests to assembly.  Don't put in test-jar.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113871 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -294,6 +294,7 @@
       </resource>
     </resources>
     
+    <!-- To be removed
     <testResources>
       <testResource>
         <filtering>false</filtering>
@@ -308,6 +309,7 @@
         <targetPath>doc/inference/data</targetPath>
       </testResource>
     </testResources>
+    -->
 
   </build>
   
