git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1121706 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,8 @@
         <executions> 
           <execution>
             <id>attach-sources</id>
+	    <phase>package</phase>
+
             <goals>
 	      <!-- Maven v2.2.0 jar-no-fork does not exists 
 		   contrary to the documentation
@@ -151,6 +153,7 @@
           </execution>
           <execution>
             <id>attach-sources-test</id>
+	    <phase>package</phase>
             <goals>
               <goal>test-jar</goal>
             </goals>
