--- a/pom.xml
+++ b/pom.xml
@@ -135,9 +135,16 @@
         <executions> 
           <execution>
             <id>attach-sources</id>
-            <phase>verify</phase>
+            <phase>package</phase>
             <goals>
-              <goal>jar</goal>
+	      <goal>jar</goal><!-- jar-no-fork does not seem to work -->
+            </goals>
+          </execution>
+          <execution>
+            <id>attach-sources-test</id>
+            <phase>package</phase>
+            <goals>
+              <goal>test-jar</goal>
             </goals>
           </execution>
         </executions>
