git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1121717 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -283,10 +283,12 @@ build.time.txt=${build.time.txt}
     <repository>
       <id>jena-repo</id>
       <name>Jena repo</name>
-      <!-- scp does not work (TERM not set !!) -->
       <!-- <url>sftp://jena.hpl.hp.com/var/repo</url> -->
-      <url>sftp://jena.hpl.hp.com/var/repo-dev</url>  <!-- Because RC's aren't snapshots -->
+      
+      <!-- Because RC's aren't snapshots -->
+      <url>sftp://jena.hpl.hp.com/var/repo-dev</url>
       <!--<url>file:tmp</url>-->
+
       <layout>default</layout>
     </repository> 
     <snapshotRepository>
