--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>arq</artifactId>
   <packaging>jar</packaging>
   <name>ARQ</name>
-  <version>2.7.1-RC-1</version>
+  <version>2.8.0</version>
   <description/>
   <url>http://jena.sf.net/ARQ</url>
 
@@ -283,11 +283,11 @@ build.time.txt=${build.time.txt}
     <repository>
       <id>jena-repo</id>
       <name>Jena repo</name>
-      <!-- <url>sftp://jena.hpl.hp.com/var/repo</url> -->
+      <url>sftp://jena.hpl.hp.com/var/repo</url>
       
       <!-- Because RC's aren't snapshots -->
-      <url>sftp://jena.hpl.hp.com/var/repo-dev</url>
-      <!--<url>file:tmp</url>-->
+      <!--<url>sftp://jena.hpl.hp.com/var/repo-dev</url> -->
+      <url>file:tmp</url>
 
       <layout>default</layout>
     </repository> 
