--- a/pom.xml
+++ b/pom.xml
@@ -45,15 +45,16 @@
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
       <artifactId>arq</artifactId>
-      <version>2.7.0</version>
+      <version>2.8.0</version>
     </dependency>
-
     <dependency>
       <groupId>com.hp.hpl.jena</groupId>
-      <artifactId>arq-extra</artifactId>
-      <version>2.7.0</version>
+      <artifactId>arq</artifactId>
+      <version>2.8.0</version>
+      <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
-
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -67,6 +68,12 @@
       <version>1.5.6</version>
     </dependency>
 
+     <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>1.8.0.10</version>
+      <scope>test</scope>
+    </dependency>
 
     <!-- Choose your logging provider -->
     <!--
@@ -116,7 +123,10 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <includes>
-            <include>com/hp/hpl/jena/sdb/test/SDBTestSuite.java</include>
+	    <!-- Requires HSQL to be set in 
+		 store-list.ttl and store-list-simple.ttl
+	    -->
+            <include>com/hp/hpl/jena/sdb/test/SDBTestAll.java</include>
           </includes>
         </configuration>
       </plugin>
