--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <project>
-
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.hp.hpl.jena</groupId>
   <artifactId>arq</artifactId>
@@ -27,6 +26,11 @@
     <connection>scm:svn:https://jena.svn.sourceforge.net/svnroot/jena/ARQ/</connection>
     <url>http://jena.svn.sourceforge.net/viewvc/jena/ARQ/</url>
   </scm>
+
+  <properties>
+    <this.root>${project.artifactId}-${project.version}</this.root>
+  </properties>
+    
 
   <dependencies>
 
@@ -257,6 +261,22 @@ build.time.txt=${build.time.txt}
             </goals>
           </execution>
           <!-- Another task, another execution -->
+	  <execution>
+	    <phase>package</phase>
+	    <configuration>
+              <tasks>
+		<delete dir="doc/javadoc"/>
+		<mkdir dir="doc/javadoc"/>
+		<unjar src="${project.build.directory}/${this.root}-javadoc.jar" 
+		       dest="doc/javadoc">
+		</unjar>
+	      </tasks>
+	    </configuration>
+	    <goals>
+	      <goal>run</goal>
+	    </goals>
+	  </execution>
+	    
         </executions>
       </plugin>
 
