git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1121751 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,6 @@
           <execution>
             <id>attach-sources</id>
             <!-- <phase>package</phase> package is the default -->
-
             <goals>
               <!-- Maven v2.2.0 jar-no-fork does not exists 
                    contrary to the documentation
@@ -181,7 +180,7 @@
           <quiet>true</quiet>
           <encoding>UTF-8</encoding>
           <windowtitle>${project.name} ${prject.version}</windowtitle>
-          <doctitle>${project.name} ${prject.version}</doctitle>
+          <doctitle>${project.name} ${project.version}</doctitle>
           <!-- include com.hp.hpl.jena.query,com.hp.hpl.jena.update,com.hp.hpl.jena.query.larq -->
           <!-- Exclude the implementation -->
           <excludePackageNames>com.hp.hpl.jena.sparql.*</excludePackageNames>
